extras rates + catalogs

--- a/views/_booking_menu.erb
+++ b/views/_booking_menu.erb
@@ -1,11 +1,11 @@
 <style type="text/css">
 
   .booking_menu a:link, .booking_menu a:visited {
-    color: black;
+    color: white;
   }
 
   .booking_menu a:hover {
-    color: gray;	
+    color: yellow;	
   }
 
   .booking_menu {
@@ -24,6 +24,9 @@
       <p class="smaller_text left-margin top-space bottom-space"><a href="/admin/rates/factor-defs"><%=t.rates_console.factors%></a></p>
       <p class="smaller_text left-margin top-space bottom-space"><a href="/admin/booking/booking-place-defs"><%=t.booking_console.places%></a></p>              
   </div>
+  <div class="top-space bottom-space">
+      <p class="more_contrast_text"><a href="/admin/booking/catalog"><%=t.booking_console.catalogs%></a></p> 
+  </div>  
   <div class="top-space bottom-space">
       <p class="more_contrast_text"><a href="/admin/booking/booking-categories"><%=t.booking_console.categories%></a></p>	
   </div>	
