--- a/views/booking_create_rates.erb
+++ b/views/booking_create_rates.erb
@@ -1,7 +1,9 @@
-<h2><%=t.booking_create_rates.title%></h2>
+<div class="top-navigation-bar">
+  <h2 class="entity-title"><%=t.booking_create_rates.title%></h2>
+</div>
 <div data-alerts="alerts" data-titles="{'success':'<%=t.entitymanagement.success%>','warning':'<%=t.entitymanagement.warning%>','error':'<%=t.entitymanagement.error%>'}" data-fade="10000">
 </div>
-<div>
+<div class="admin_content_wrapper">
    <div class="grid_6">  
 	 <div class="guiblock">
   	    <%= t.booking_create_rates.description %> 
