--- a/views/bookings_planning.erb
+++ b/views/bookings_planning.erb
@@ -24,7 +24,7 @@
 		<span id="next" class="all-space over_cursor background-color-2 color-2 all-border-solid">&gt;</span>
 	</div>
 </div>
-<div class="left-margin right-margin">
+<div class="admin_content_wrapper">
 <table id="planning_table" style="table-layout: fixed; margin: 0 auto">
 </table>
 <div class="top-margin-2lines">
