--- a/views/console_booking_configuration_templates.erb
+++ b/views/console_booking_configuration_templates.erb
@@ -1,7 +1,7 @@
 <div class="top-navigation-bar">
   <h2 class="entity-title"><%=t.booking_configuration_templates.title%></h2>
 </div>
-<div class="left-space right-space">
+<div class="admin_content_wrapper">
 <h3 class="bottom-border-solid"><%=t.booking_configuration_templates.general%></h3>
 <div class="container_12">
   <div class="grid_6">
