--- a/views/bookings_statistics.erb
+++ b/views/bookings_statistics.erb
@@ -1,3 +1,7 @@
-<h2><%=t.booking_summary.title%></h2>
+<div class="top-navigation-bar">
+<h2 class="entity-title"><%=t.booking_summary.title%></h2>
+</div>
+<div class="admin_content_wrapper">
 <%= partial(:reservations_forecast) %>
 <%= partial(:incoming_money_summary) %>
+</div>
