--- a/views/console_booking.erb
+++ b/views/console_booking.erb
@@ -1,4 +1,7 @@
-<h2><%=t.booking_console.title%></h2>
+<div class="top-navigation-bar">
+  <h2 class="entity-title"><%=t.booking_console.title%></h2>
+</div>
+<div class="admin_content_wrapper">
 <%= partial(:pickedup_bookings) %>
 <%= partial(:returned_bookings) %>
 <div class="container_12">
@@ -47,4 +50,5 @@
       <p class="centered_text more_contrast_text"><a href="/api/booking/create-rates2"><%=t.booking_console.create_rates%></a></p>
     </div>
   </div>          
+</div>
 </div>
